2003-05-08  Ross Burton  <ross@burtonini.com>

	* gconf/gconf-client.[ch]: Add gconf_client_notify(), to fake a
	notification from a monitored key. Fixes #70553.

2003-05-07  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-05-03  Havoc Pennington  <hp@pobox.com>

	* configure.in: 2.3.2

	* NEWS: update

2003-04-26  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* configure.in: call AC_LIBTOOL_WIN32_DLL.

	* backends/Makefile.am: add -no-undefined to *_la_LDFLAGS.
	add $(top_builddir)/gconf/libgconf-$(MAJOR_VERSION).la to *_la_LIBADD.

	* gconf/Makefile.am (libgconf_2_la_LDFLAGS): add -no-undefined.

	* gconf/gconfd.c (main): use g_strdup_printf() instead of strlen() +
	g_malloc() + g_snprintf().

03-04-23  Muktha <muktha.narayan@wipro.com>
	* gconf/gconfd.c
	When reading the saved_state file, gconfd will not log message if 
	the saved_state file is not present. Fixes bug #110944.

2003-03-27  Brian Cameron <brian.cameron@sun.com>

	* gconf/gconf-sanity-check.c
	Updated text of the lock question to more clear text that was
	approved by the docs team.  Havoc reviewed/approved this
	change.

2003-03-27  Ross Burton  <ross@burtonini.com>

	* gconf/gconftool.c:
	Added --get-type, --get-list-size and --get-list-element. Patch
	from TODO, closing #91349.
	(do_dump_values): Return an int as the prototype says we do.

	Applied patch from Jeff Franks <jcf@tpg.com.au> with a extensions,
	closing #97205.
	* gconf/gconf-schema.h:
	* gconf/gconf-value.h: Wrapped both header files in an extern "C"
	for C+compilation.
	
	* gconf/gconf-internals.h:
	* gconf/gconf-value.h: Exported gconf_entry_copy(), _ref and
	_unref. Moved declaration from gconf-internals.h to
	gconf-value.h. Also deprecated gconf_entry_free().

	* doc/gconf/tmpl/gconf-value.sgml: Fixed typo, GCONF_VALUE_DOUBLE,
	in the description for gconf_value_get_float(). Changed the value
	type to GCONF_VALUE_FLOAT.
	
	* gconf/gconf-client.h: Added missing GCONF_CLIENT_GET_CLASS